# polars-mongo

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json  index.d.ts  index.js  package.json  tsconfig.json
examples/read_collection/: Cargo.toml
examples/read_collection/src/: main.rs
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: buffer.rs  conversion.rs  lib.rs  main.rs  prelude.rs
src/bson/: buffer.rs  mod.rs
