[package]
name = "polars-mongo"
version = "0.1.0"
edition = "2021"
authors = ["universalmind303 <cory.grinstead@gmail.com>"]
license = "MIT"
keywords = ["dataframe", "query-engine", "arrow", "polars", "mongo", "mongodb"]
description = "Connector to read polars dataframes from mongodb collections"

[lib]
crate-type = ["lib"]


[dependencies]
num = "^0.4"
polars-time = "0.23.1"
polars-core = "0.23.1"
serde = {version = "1.0.137", features = ["derive", "rc"], optional = true}

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]


[dependencies.polars]
version = "0.22"
features = ["lazy", "dtype-full"]



[profile.release]
codegen-units = 1
lto = "fat"

[workspace]
members = [
  "examples/read_collection"
]